--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,11 @@
 #container {
     display: flex;
+    flex-wrap: wrap;
     width: 960px;
     height: 960px;
     justify-content: center;
+    border-style: solid;
+    border-color: black;
 }
 
 .grid_div {
