--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,18 @@
 #container {
-    display: flex;
-    flex-wrap: wrap;
-    width: 960px;
-    height: 960px;
-    border-style: solid;
-    border-color: black;
-    margin-top: 50px;
+	display: flex;
+	flex-wrap: wrap;
+	width: 960px;
+	height: 960px;
+	border-style: solid;
+	border-color: black;
+	margin-top: 50px;
 }
 
 #userpopup {
-    margin-top: 20px;
+	margin-top: 20px;
+}
+
+button {
+	font-size: 20px;
+	font-weight: bold;
 }
